alt attribute for ads images, fix missing tags on upload, fix wrong name for translation string (#1577)
* alt attribute for ads images

* fix <tr> too much

* fix missing <tr> that created HTML error

* fix wrong translation string name

* ditto

* fix accepted tags not having background on classic

* Put tag table inside upload table

* Update classic.css

* Remove prefix of dlsite tag on view

* Update main.css

* 10px bigger website

* fix wrong css selector

* fix markdown scroll visually broken in classic.css

* Add magnet link on torrent file not found page

* don't show magnet <a> if empty

* Fetch magnet link in download.go and pass it on to torrent_file_missing

* add magnet in template_test

--- a/public/css/classic.css
+++ b/public/css/classic.css
@@ -584,8 +584,8 @@ span.tag {
     border-radius: 0;
     box-shadow: none;
     border: 1px solid #c5c5c5;
+    background: white;
 }
-
 
 .upload-form-table {
     width: auto;
@@ -630,11 +630,14 @@ span.tag {
 .upload-form-table .CodeMirror-scroll, .upload-form-table .CodeMirror {
     min-height: 120px;
 }
+.upload-form-table .CodeMirror-scroll {
+    max-width: unset!important;
+}
 
 .form-input.language {
     border-radius: 0;
     padding: 7px 3px;
 }
-.upload-tag-table td {
-    padding-right: 5px!important;
+.upload-tag-table .form-group input, .upload-tag-table .form-group select {
+    width: 118px!important;   
 }
