--- a/public/css/main.css
+++ b/public/css/main.css
@@ -103,7 +103,7 @@ img[class$="-w"] {
 }
 
 .container, .modtools {
-    max-width: 1130px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
@@ -1925,7 +1925,7 @@ p.upload-rules {
 .upload-form-table .table-input-label, .upload-form-table td label{
     vertical-align: top;
 }
-.upload-form-table .upload-form-table .CodeMirror {
+.upload-form-table .CodeMirror {
     font-weight: normal;
 }
 .upload-form-table .table-input {
@@ -1939,6 +1939,12 @@ p.upload-rules {
 }
 .upload-form-table .table-torrent-link input[type="text"] {
     width: 65%;
+}
+.upload-form-table .editor-statusbar {
+    position: relative;
+    margin-top: -27px;
+    margin-bottom: 2px;
+    z-index: 1;
 }
 #tag-h3 {
     margin: 0 0 7px;
